# rust-in-peace-vscode-theme

./: .fallowrc.json  .gitignore  .vscodeignore  CHANGELOG.md  INSTALL.md  LICENCE.txt  LICENSE  README.md  eslint.config.mjs  justfile  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release.yml  deploy.yml
assets/: palette.json
ports/helix/: rust-in-peace-dawn-patrol.toml  rust-in-peace-hangar-18.toml  rust-in-peace-polaris.toml  rust-in-peace.toml
ports/herdr/: rust-in-peace-dawn-patrol.toml  rust-in-peace-hangar-18.toml  rust-in-peace-polaris.toml  rust-in-peace.toml
ports/ptyxis/: rust-in-peace-dawn-patrol.palette  rust-in-peace-hangar-18.palette  rust-in-peace-polaris.palette  rust-in-peace.palette
ports/zed/: rust-in-peace.json
ports/zellij/: rust-in-peace-dawn-patrol.kdl  rust-in-peace-hangar-18.kdl  rust-in-peace-polaris.kdl  rust-in-peace.kdl
samples/: c.c  cfml.cfml  cpp.cpp  cs.cs  css.css  go.go  html.html  java.java  js.js  json.json  php.php  py.py  rb.rb  rs.rs  sh.sh  swift.swift  ts.ts  vue.vue
scripts/: README.md  __init__.py  build-themes.ts  build.js  build.py  build.ts  build_ports.py  build_themes.py  color.py  generate.js  generate.py  generate.ts  lint.py  lint.ts  palette.py  palette.ts  readme.py  readme.ts  variants.py  variants.ts
scripts/targets/: __init__.py  helix.py  helix.ts  herdr.py  herdr.ts  ptyxis.py  ptyxis.ts  zed.py  zed.ts  zellij.py  zellij.ts
src/: palette-light.json  palette.json  rust-in-peace.yml
tests/: test_color.py  test_generate.py  test_palette.py  test_readme.py  test_variants.py
theme/: rust-in-peace-soft.json  rust-in-peace.json
themes/: rust-in-peace-color-theme.json  rust-in-piece-color-theme.json
themes/helix/: rust-in-peace-dawn-patrol.toml  rust-in-peace-hangar-18.toml  rust-in-peace-polaris.toml  rust-in-peace.toml
themes/herdr/: rust-in-peace-dawn-patrol.toml  rust-in-peace-hangar-18.toml  rust-in-peace-polaris.toml  rust-in-peace.toml
themes/ptyxis/: rust-in-peace-dawn-patrol.palette  rust-in-peace-hangar-18.palette  rust-in-peace-polaris.palette  rust-in-peace.palette
themes/zed/: rust-in-peace.json
themes/zellij/: rust-in-peace-dawn-patrol.kdl  (+3 more)
