[project]
name = "rust-in-peace-scripts"
version = "0.0.0"
description = "Build scripts for the Rust in Peace theme (not a distributable package)."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6",
    "coloraide>=4",
    "resvg-py>=0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "mypy>=1.14",
    "types-pyyaml>=6",
    "pytest>=8",
    "pytest-cov>=6",
    "vulture>=2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "C4", "PTH", "D", "C90", "PL", "S"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# SVG/markdown templating reads better as whole-tag lines.
"scripts/readme.py" = ["E501"]
# Test names document themselves; asserts are the pytest idiom and literal
# expected values in assertions are self-documenting.
"tests/*" = ["D1", "S101", "PLR2004"]

[tool.mypy]
strict = true
files = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=40"

[tool.vulture]
paths = ["scripts", "tests"]
min_confidence = 80
